# DIY-Challenge-Repo

./: .gitignore  .gitmodules  README.md  setup.sh
docs/: diy-sad.html  generate_apriltag_calibration_guide.py  generate_calibration_integration_guide.py  generate_camera_guide.py  generate_competition_playbook.py  generate_docs.py  generate_gpu_guide.py  generate_mapping_guide.py  generate_nav2_tuning_guide.py  installation_setup.html  legacy_usage.html  next_steps_checklist.html  repo_usage_guide.html  reuse_plan_step1.md
patches/: lidar_imu_calib.patch  livox_ros_driver2.patch  ndt_omp_ros2.patch
profiles/: jetson.env  laptop.env  raspi.env
scripts/: calibrate_cam_lidar.sh  calibrate_camera_intrinsics.sh  calibrate_extrinsics.sh  calibrate_imu.sh  debug_robot.sh  deploy_bundle.sh  env.sh  health_check.sh  record_bag.sh  replay_bag.sh  run_robot.sh
src/challenge_bringup/: CMakeLists.txt  README.md  package.xml
src/challenge_bringup/config/: collision_monitor_params.yaml  nav2_params.yaml
src/challenge_bringup/launch/: challenge_master.launch.py  joystick_drive.launch.py
src/challenge_bringup/maps/: static_map.yaml
src/diy_cmd_vel_mux/: package.xml  setup.cfg  setup.py
src/diy_cmd_vel_mux/diy_cmd_vel_mux/: cmd_vel_mux_node.py
src/diy_estop_controller/: package.xml  setup.cfg  setup.py
src/diy_estop_controller/diy_estop_controller/: estop_controller_node.py
src/diy_localization/: CMakeLists.txt  package.xml
src/diy_localization/config/: ekf_global.yaml  ekf_local.yaml  fast_lio_hesai_qt64.yaml  navsat_transform.yaml
src/diy_localization/launch/: localization.launch.py  offline_mapping.launch.py
src/diy_motor_control_legacy/: CMakeLists.txt  package.xml
src/diy_motor_control_legacy/include/differential-drive/: pid.hpp
src/diy_motor_control_legacy/src/: diff-drive-main.cpp
src/diy_robot_description/: CMakeLists.txt  package.xml
src/diy_robot_description/launch/: description.launch.py
src/diy_robot_description/urdf/: robot.urdf.xacro
