<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>challenge_bringup</name>
  <version>0.1.0</version>
  <description>Bootstrap bringup package for DIY Challenge 2026 based on reusable legacy modules.</description>
  <maintainer email="team@example.com">DIY Challenge Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>hesai_ros_driver</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
