<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>diy_cmd_vel_mux</name>
  <version>0.1.0</version>
  <description>
    Command-velocity multiplexer for DIY Challenge 2026.
    Arbitrates /cmd_vel_joy (joystick), /cmd_vel_nav (Nav2), and /estop_active
    to produce a single safe /cmd_vel_safe output.
    Modes: JOYSTICK | AUTONOMOUS | ESTOP_LOCK
  </description>
  <maintainer email="team@example.com">DIY Challenge Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
