<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>diy_estop_controller</name>
  <version>0.1.0</version>
  <description>
    E-stop controller bridge for DIY Challenge 2026.
    Monitors heartbeat from STM32 via micro-ROS and publishes /estop_active.
    If heartbeat is lost for more than 800 ms the node treats it as an E-stop.
    The actual hardware E-stop path lives entirely in the STM32 firmware;
    this node provides only the advisory ROS-side mirror required so that
    Nav2 and cmd_vel_mux can pause gracefully.
  </description>
  <maintainer email="team@example.com">DIY Challenge Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
