<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>diy_localization</name>
  <version>0.1.0</version>
  <description>
    Localization stack for DIY Challenge 2026.
    Wraps FAST-LIO2 (LiDAR-inertial odometry) and robot_localization
    (EKF1 local + EKF2 global with RTK GNSS) into a single launch file.
    Also provides the LIO-SAM offline mapping launch for prior map generation.
  </description>
  <maintainer email="team@example.com">DIY Challenge Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>fast_lio</exec_depend>
  <exec_depend>lio_sam</exec_depend>
  <exec_depend>robot_localization</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
