<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>diy_robot_description</name>
  <version>0.1.0</version>
  <description>
    Robot URDF and static TF tree for DIY Challenge 2026.
    Defines base_link, lidar_link (Hesai QT64), imu_link (dedicated IMU),
    camera_link (RealSense D435i), and gps_link (RTK antenna).
    Extrinsic transforms are PLACEHOLDER — replace with calibration results
    from lidar_imu_calib and cam_lidar_calib before autonomous operation.
  </description>
  <maintainer email="team@example.com">DIY Challenge Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
